View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027232 | Open CASCADE | OCCT:Configuration | public | 2016-03-05 15:45 | 2016-04-20 15:49 |
Reporter | kgv | Assigned To | kgv | ||
Priority | normal | Severity | block | ||
Status | closed | Resolution | fixed | ||
Platform | Android | ||||
Product Version | 7.0.0 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0027232: Configuration - fix mblen missing building issue on Android | ||||
Description | The multi-byte/widechar conversion tools are broken on Android:Linking CXX shared library ../../lin32/gcc/lib/libTKernel.so /NCollection_UtfString.cxx.o:NCollection_UtfString.cxx:function NCollection_UtfStringTool::FromLocale(char const*): error: undefined reference to 'mblen' | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR27232 has been created by kgv. SHA-1: ab2335aeaee54760cef4a109a9ec6312bc0e062c Detailed log of new commits: Author: kgv Date: Sat Mar 5 15:46:42 2016 +0300 0027232: Configuration - fix mblen missing building issue on Android Assume UTF-8 as the only locale supported on Android. |
|
Patch is ready for review. |
|
No remarks, please check compilation and integrate (together with 0027233) |
|
Branch CR27232 has been deleted by kgv. SHA-1: ab2335aeaee54760cef4a109a9ec6312bc0e062c |
occt: master ab2335ae 2016-03-05 12:46:42 Details Diff |
0027232: Configuration - fix mblen missing building issue on Android Assume UTF-8 as the only locale supported on Android. |
Affected Issues 0027232 |
|
mod - src/NCollection/NCollection_UtfString.cxx | Diff File | ||
mod - src/NCollection/NCollection_UtfString.lxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-03-05 15:45 | kgv | New Issue | |
2016-03-05 15:45 | kgv | Assigned To | => bugmaster |
2016-03-05 15:45 | kgv | Assigned To | bugmaster => kgv |
2016-03-05 15:45 | kgv | Status | new => assigned |
2016-03-05 15:47 | git | Note Added: 0051426 | |
2016-03-05 15:47 | kgv | Note Added: 0051427 | |
2016-03-05 15:47 | kgv | Assigned To | kgv => abv |
2016-03-05 15:47 | kgv | Status | assigned => resolved |
2016-03-05 15:48 | kgv | Relationship added | child of 0027197 |
2016-03-05 16:52 | kgv | Relationship added | related to 0027233 |
2016-03-07 17:42 | abv | Note Added: 0051430 | |
2016-03-07 17:42 | abv | Assigned To | abv => bugmaster |
2016-03-07 17:42 | abv | Status | resolved => reviewed |
2016-03-21 14:58 | kgv | Changeset attached | => occt master ab2335ae |
2016-03-21 14:58 | kgv | Assigned To | bugmaster => kgv |
2016-03-21 14:58 | kgv | Status | reviewed => verified |
2016-03-21 14:58 | kgv | Resolution | open => fixed |
2016-04-17 13:07 | git | Note Added: 0052818 | |
2016-04-20 15:43 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:49 |
|
Status | verified => closed |