0027232: Configuration - fix mblen missing building issue on Android

Assume UTF-8 as the only locale supported on Android.